# SocketCommunication

./: README.md  init.sql
GameSocketServer/: .gitignore  CMakeLists.txt  vcpkg.json
GameSocketServer/src/: main.cpp  server.cpp  server.h  session.cpp  session.h
GameSocketServer/src/api/: api_handler.h  auth_api.cpp  auth_api.h
GameSocketServer/src/db/: db_pool.cpp  db_pool.h  user_dao.cpp  user_dao.h
MatchingServer/: .dockerignore  .gitignore  .vcpkg_hash  Makefile  MatchingServer.sln  MatchingServer.vcxproj  README.md  build.sh  ci.sh  db-init.sql  docker-compose.yml  docker-install.sh  dockerfile  init.ps1  init.sh  postgres-init.sh  vcpkg.json
MatchingServer/src/: convert_encoding.ps1  main.cpp
MatchingServer/src/config/: config.json
MatchingServer/src/controller/: auth_controller.cpp  auth_controller.h  controller.h  game_controller.cpp  game_controller.h  room_controller.cpp  room_controller.h
MatchingServer/src/core/: server.cpp  server.h  session.cpp  session.h
MatchingServer/src/repository/: game_repository.cpp  game_repository.h  room_repository.cpp  room_repository.h  user_repository.cpp  user_repository.h
MatchingServer/src/service/: auth_service.cpp  auth_service.h  game_service.cpp  game_service.h  room_service.cpp  room_service.h
MatchingServer/src/util/: db_pool.cpp  db_pool.h  password_util.cpp  password_util.h
boost_Chat_Server/: Client.cpp  Makefile  Makefile_Both.txt  Server.cpp
boost_Practice/01_Basics/: Accept_connection.cpp  Bind_passive_socket.cpp  Connect_socket_DNS_client.cpp  Connect_socket_client.cpp  Create_EP_client.cpp  Create_EP_server.cpp  Create_active_socket.cpp  Create_passive_socket.cpp  Resolve_DNS.cpp
boost_Practice/02_IO_Operations/: BufferInput.cpp  BufferOutput.cpp  ReadSocketSync.cpp  SocketShutdownClient.cpp  SocketShutdownServer.cpp  StreamBuffer.cpp  WriteSocketAsync.cpp  async_cancel.cpp  async_read.cpp  async_read_some.cpp  async_write.cpp  write.cpp
boost_Practice/03_Client_Application/: AsyncTCPClient.cpp  MultiThreadAsyncTCPClient.cpp  SyncTCPClient.cpp  SyncUDPClient.cpp
boost_Practice/04_Server_Application/: AsyncTCPServer.cpp  IterativeSyncTCPServer.cpp  ParallelSyncTCPServer.cpp
